Updated: headliners image now aligns vertically at 80% instead of centered so the aspect ratio media query is no longer needed

--- a/css/css.css
+++ b/css/css.css
@@ -76,7 +76,7 @@ a:hover { text-decoration: underline; }
 {
     width: 100%;
     height: 100%;
-    background: url('../images/fox-sign-getlow.jpg') no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;
+    background: url('../images/fox-sign-getlow.jpg') no-repeat center 80% fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;
 }
 
 .maincontain
@@ -357,13 +357,4 @@ a:hover { text-decoration: underline; }
     
     /* tour */
     #tour .story { padding-left: 0; }
-}
-
-
-@media (min-aspect-ratio: 1/1)
-{
-    #headimg
-    {
-        background: url('../images/fox-sign-crop.jpg') no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;
-    }
 }
